--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,8 @@
 <nav>
   <a routerLink="/">Home</a>
   <a routerLink="/todos">Todos</a>
-  <a routerLink="/login">Login</a>
+  <a routerLink="/login" *ngIf="!auth.isUserLoggedIn">Login</a>
+  <a routerLink="/logout" *ngIf="auth.isUserLoggedIn === true">Logout</a>
 </nav>
 <div class="spacing">
   <router-outlet></router-outlet>
