--- a/client/src/app/_components/register/register.component.html
+++ b/client/src/app/_components/register/register.component.html
@@ -1,1 +1,25 @@
-<p>register works!</p>
+<h1>Register</h1>
+
+<ng-form class="form-list">
+  <mat-form-field appearance="fill">
+    <mat-label>Username</mat-label>
+    <input matInput type="text" [(ngModel)]="creds.username" name="username" />
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Email</mat-label>
+    <input matInput type="text" [(ngModel)]="creds.email" name="email" />
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Password</mat-label>
+    <input
+      matInput
+      type="password"
+      [(ngModel)]="creds.password"
+      name="password"
+    />
+  </mat-form-field>
+  <a routerLink="/login">Or Login?</a>
+  <button type="submit" mat-raised-button color="primary" (click)="submit()">
+    Register
+  </button>
+</ng-form>
