--- a/client/src/app/_components/register/register.component.scss
+++ b/client/src/app/_components/register/register.component.scss
@@ -1,10 +1,7 @@
-.form-list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  background-color: #f5f5f5;
-  padding: 20px;
+.title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #333;
+  margin: 3rem 0;
+  text-align: center;
 }
