--- a/generic-client/src/app/pages/home/home.component.html
+++ b/generic-client/src/app/pages/home/home.component.html
@@ -1,94 +1,9 @@
 <h1>Model Viewer</h1>
 
-<mat-form-field appearance="fill">
-  <mat-label>Select A Model</mat-label>
-  <mat-select
-    [(value)]="currentModel"
-    (selectionChange)="onModelChange($event)"
-  >
-    <mat-option>None</mat-option>
-    <mat-option *ngFor="let model of models" [value]="model">
-      {{ model }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+<app-model-selector></app-model-selector>
 
-<!-- <div *ngIf="currentModel">
-  <h2>Add Fields</h2>
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Pick Field</mat-label>
-    <input
-      type="text"
-      placeholder="Pick one"
-      aria-label="Number"
-      matInput
-      [formControl]="fieldControl"
-      [matAutocomplete]="auto"
-    />
-    <mat-autocomplete
-      (optionSelected)="onInputChange($event)"
-      autoActiveFirstOption
-      #auto="matAutocomplete"
-    >
-      <mat-option *ngFor="let option of filteredFields || []" [value]="option">
-        {{ option.displayName }}
-      </mat-option>
-    </mat-autocomplete>
-  </mat-form-field>
-</div> -->
-<!-- 
-<mat-chip-list
-  aria-label="Fields"
-  class="example-chip"
-  cdkDropList
-  cdkDropListOrientation="horizontal"
-  (cdkDropListDropped)="drop($event)"
->
-  <mat-chip class="example-box" *ngFor="let field of selectedFields" cdkDrag>
-    {{ field.displayName }}
-    <button matChipRemove (click)="removeSelectedField(field.name)">
-      <mat-icon>cancel</mat-icon>
-    </button>
-  </mat-chip>
-</mat-chip-list> -->
-
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-  <!-- This is the tree node template for leaf nodes -->
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-    <!-- use a disabled button to provide padding for tree leaf -->
-    <button mat-icon-button disabled></button>
-    <mat-checkbox
-      class="checklist-leaf-node"
-      [checked]="checklistSelection.isSelected(node)"
-      (change)="todoLeafItemSelectionToggle(node)"
-    >
-      {{ node.displayName }}</mat-checkbox
-    >
-  </mat-tree-node>
-  <!-- This is the tree node template for expandable nodes -->
-  <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
-    <button
-      mat-icon-button
-      matTreeNodeToggle
-      [attr.aria-label]="'Toggle ' + node.displayName"
-    >
-      <mat-icon class="mat-icon-rtl-mirror">
-        {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
-      </mat-icon>
-    </button>
-    <mat-checkbox
-      [checked]="descendantsAllSelected(node)"
-      [indeterminate]="descendantsPartiallySelected(node)"
-      (change)="todoItemSelectionToggle(node)"
-      >{{ node.displayName }}</mat-checkbox
-    >
-  </mat-tree-node>
-</mat-tree>
+<app-tree-view></app-tree-view>
 
 <div style="padding: 1rem 0rem"></div>
 
-<table-view
-  *ngIf="currentModel"
-  [columns]="selectedFields"
-  [dataSource]="data"
-></table-view>
+<table-view *ngIf="currentModel"></table-view>
