--- a/generic-client/src/app/pages/home/components/table-view/table-view.component.html
+++ b/generic-client/src/app/pages/home/components/table-view/table-view.component.html
@@ -1,14 +1,70 @@
-<mat-table #table [dataSource]="data" class="mat-elevation-z4">
+<mat-table
+  #table
+  [dataSource]="data"
+  id="table"
+  [class]="innerTable ? '' : 'mat-elevation-z4'"
+  multiTemplateDataRows
+>
   <ng-container
     matColumnDef="{{ col.name }}"
-    *ngFor="let col of selectedFields; let colIndex = index"
+    *ngFor="let col of selectedReferenceFields; let colIndex = index"
   >
-    <mat-header-cell *matHeaderCellDef>{{ col.displayName }}</mat-header-cell>
+    <mat-header-cell *matHeaderCellDef>{{ col | parseName }}</mat-header-cell>
     <mat-cell *matCellDef="let element">{{
       element | getValue: col.name
     }}</mat-cell>
   </ng-container>
 
+  <ng-container matColumnDef="expandedDetail">
+    <mat-cell *matCellDef="let detail" style="width: 100%; padding: 1rem 1rem">
+      <div *ngIf="detail._expanded" style="width: 100%; padding: 1rem 1rem">
+        <div *ngFor="let col of distinctCollections">
+          <h2>{{ col }}</h2>
+          <table-view
+            [innerTable]="true"
+            [data]="detail | getValue: col"
+            [selectedFields]="
+              generateFieldsForInnerTable(selectedCollectionFields)
+            "
+          ></table-view>
+        </div>
+      </div>
+    </mat-cell>
+  </ng-container>
+
+  <ng-container matColumnDef="actions">
+    <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+    <mat-cell *matCellDef="let row">
+      <button
+        *ngIf="distinctCollections.size > 0"
+        mat-icon-button
+        aria-label="expand row"
+        (click)="toggleRow(row); $event.stopPropagation()"
+      >
+        <mat-icon *ngIf="!row._expanded">keyboard_arrow_down</mat-icon>
+        <mat-icon *ngIf="row._expanded">keyboard_arrow_up</mat-icon>
+      </button>
+    </mat-cell>
+  </ng-container>
+
   <mat-header-row *matHeaderRowDef="realColumns"></mat-header-row>
-  <mat-row *matRowDef="let myRowData; columns: realColumns"></mat-row>
+
+  <mat-row
+    *matRowDef="let myRowData; columns: realColumns; let i = index"
+    class="element-row"
+    [class.expanded]="myRowData._expanded"
+  ></mat-row>
+
+  <mat-row
+    *matRowDef="let row; columns: ['expandedDetail']"
+    [@detailExpand]="row._expanded ? 'expanded' : 'collapsed'"
+  ></mat-row>
 </mat-table>
+<mat-paginator
+  [length]="count"
+  [pageSize]="page.take"
+  [pageSizeOptions]="pageSizeOptions"
+  (page)="onPagination($event)"
+  aria-label="Select page"
+>
+</mat-paginator>
