I think I added sorting

--- a/generic-client/src/app/pages/home/components/table-view/table-view.component.html
+++ b/generic-client/src/app/pages/home/components/table-view/table-view.component.html
@@ -1,15 +1,21 @@
 <mat-table
   #table
   [dataSource]="data"
+  matSort
   id="table"
   [class]="innerTable ? '' : 'mat-elevation-z4'"
   multiTemplateDataRows
+  (matSortChange)="sortData($event)"
+  [matSortActive]="sort.active"
+  [matSortDirection]="sort.direction"
 >
   <ng-container
     matColumnDef="{{ col.name }}"
     *ngFor="let col of selectedReferenceFields; let colIndex = index"
   >
-    <mat-header-cell *matHeaderCellDef>{{ col | parseName }}</mat-header-cell>
+    <mat-header-cell [mat-sort-header]="col.name" *matHeaderCellDef>{{
+      col | parseName
+    }}</mat-header-cell>
     <mat-cell *matCellDef="let element">{{
       element | getValue: col.name
     }}</mat-cell>
@@ -60,7 +66,9 @@
     [@detailExpand]="row._expanded ? 'expanded' : 'collapsed'"
   ></mat-row>
 </mat-table>
+
 <mat-paginator
+  *ngIf="!innerTable"
   [length]="count"
   [pageSize]="page.take"
   [pageSizeOptions]="pageSizeOptions"
