--- a/generic-client/src/app/pages/home/home.component.html
+++ b/generic-client/src/app/pages/home/home.component.html
@@ -13,4 +13,6 @@
   [page]="page"
   (pageChange)="onPageChange($event)"
   [count]="count"
+  [sort]="sort"
+  (sortChange)="onSortChange($event)"
 ></table-view>
