--- a/generic-client/src/app/pages/home/home.component.html
+++ b/generic-client/src/app/pages/home/home.component.html
@@ -9,6 +9,7 @@
 <table-view
   *ngIf="currentModel"
   [selectedFields]="selectedFields"
+  (selectedFieldsChange)="onSelectedFieldsChange($event)"
   [data]="data"
   [page]="page"
   (pageChange)="onPageChange($event)"
