--- a/generic-client/src/app/pages/home/components/table-view/table-view.component.scss
+++ b/generic-client/src/app/pages/home/components/table-view/table-view.component.scss
@@ -65,3 +65,9 @@
   cursor: pointer;
   border: dotted 3px transparent;
 }
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
